# cm-template-test

./: README.md
http-rust/: Cargo.toml
http-rust/src/: bindings.rs  lib.rs
http-rust/template/: spin-template.toml
http-rust/template/content/: Cargo.toml.tmpl  spin.toml.tmpl
http-rust/template/content/{{ project-name | kebab_case }}/: Cargo.toml.tmpl
run-template/: .gitignore  Cargo.toml
run-template/src/: actions.rs  bindings.rs  custom_filter.rs  host.rs  main.rs
sample-filter/: Cargo.toml
sample-filter/src/: bindings.rs  lib.rs
sample-template/: Cargo.toml
sample-template/src/: bindings.rs  lib.rs
sample-template/template/: spin-template.toml
sample-template/template/content/: fruit.txt  spin.toml
sample-template/template/filters/: sample_filter.wasm
wit/: template.wit
wit/filter/: filter.wit
wit/template/: template.wit
