[package]
name = "sample-template"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component.dependencies]

[package.metadata.component.registries]
default = "https://registrytest-vfztdiyy.fermyon.app"

[package.metadata.component.target]
path = "../wit"
# package = "fermyon:spin-template"
# version = "0.0.1"
# world = "fermyon:spin-template/run-template@0.0.1"
